hotfix: added more jwt verification feat: added jvm args for better performace